--- a/Connected_Health_App/app/src/main/res/layout/activity_measurement_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_measurement_view.xml
@@ -4,9 +4,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="au.edu.adelaide.connected_health_app.MeasurementViewActivity">
+    tools:context="au.edu.adelaide.connected_health_app.MeasurementViewActivity"
+    android:background="#ff44fffa">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Measurement"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:autoText="false" />
 </RelativeLayout>
