--- a/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
@@ -6,7 +6,28 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="au.edu.adelaide.connected_health_app.ProfileViewActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!--PROFILE VALUES
+    1. first name
+    2. last name
+    3. address
+    4. phone number
+    5. email -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_large_material"
+        android:id="@+id/profile_content" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit"
+        android:id="@+id/profile_edit"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="goToProfileEdit" />
 
 </RelativeLayout>
+
+
