Try displaying medical notes in profile view

--- a/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
@@ -28,6 +28,14 @@
         android:layout_centerHorizontal="true"
         android:onClick="goToProfileEdit" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/medical_notes"
+        android:layout_below="@+id/profile_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="107dp" />
+
 </RelativeLayout>
 
 
