--- a/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_information_view.xml
@@ -1,36 +1,39 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="au.edu.adelaide.connected_health_app.InformationViewActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="au.edu.adelaide.connected_health_app.InformationViewActivity"
+    android:orientation="horizontal"
+    android:weightSum="4">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/info_title"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:autoText="false"
-        android:id="@+id/infoHeading"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:text="@string/info_title"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:autoText="false"-->
+        <!--android:id="@+id/infoHeading"/>-->
 
-    <!--Resource links-->
-    <TextView
-        android:id="@+id/infoLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/infoHeading"
-        android:layout_marginTop="20dp"
-        android:text="@string/info_link"/>
+    <!--&lt;!&ndash;Resource links&ndash;&gt;-->
+    <!--<TextView-->
+        <!--android:id="@+id/infoLink"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/infoHeading"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:text="@string/info_link"/>-->
 
-    <WebView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/webviewYoutubeVid"
-        android:layout_below="@+id/infoLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+    <!--<WebView xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:id="@+id/webviewYoutubeVid"-->
+        <!--android:layout_below="@+id/infoLink"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
 
-</RelativeLayout>
+    <include layout="@layout/quick_menu_bar"
+        android:id="@+id/quickMenuBar"/>
+
+</LinearLayout>
