--- a/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_profile_view.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="au.edu.adelaide.connected_health_app.ProfileViewActivity">
+
+    <include layout="@layout/quick_menu_bar"
+        android:id="@+id/quickMenuBar"/>
 
     <!--PROFILE VALUES
     1. first name
@@ -14,10 +14,19 @@
     5. email -->
 
     <TextView
+        android:layout_below="@+id/quickMenuBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/abc_text_size_large_material"
         android:id="@+id/profile_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_large_material"
+        android:id="@+id/medical_notes"
+        android:text="test"
+        android:layout_below="@+id/profile_content"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -27,15 +36,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:onClick="goToProfileEdit" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/medical_notes"
-        android:layout_below="@+id/profile_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
 
 </RelativeLayout>
 
