--- a/Connected_Health_App/app/src/main/res/layout/activity_main.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,18 @@
             android:id="@+id/textView"
             android:textIsSelectable="false"
             android:textColor="#ffffffff" />
+
+        <!--Panel icon-->
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/info_icon"
+            android:layout_alignParentRight="false"
+            android:scaleType="fitXY" />
+
     </RelativeLayout>
 
     <!--Questionnaire panel-->
@@ -44,6 +56,16 @@
             android:layout_marginTop="46dp"
             android:gravity="center_horizontal"
             android:textColor="#ffffffff" />
+
+        <!--Panel icon-->
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView2"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/questionnaire_icon"
+            android:scaleType="fitXY" />
     </RelativeLayout>
 
     <!--Profile panel-->
@@ -65,6 +87,16 @@
             android:layout_marginTop="46dp"
             android:gravity="center_horizontal"
             android:textColor="#ffffffff" />
+
+        <!--Panel icon-->
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView3"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/profile_icon"
+            android:scaleType="fitXY" />
     </RelativeLayout>
 
     <!--Measurements panel-->
@@ -86,5 +118,15 @@
             android:layout_marginTop="46dp"
             android:gravity="center_horizontal"
             android:textColor="#ffffffff" />
+
+        <!--Panel icon-->
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView4"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/measurement_icon"
+            android:scaleType="fitXY" />
     </RelativeLayout>
 </LinearLayout>
