--- a/Connected_Health_App/app/src/main/res/layout/activity_single_item_view.xml
+++ b/Connected_Health_App/app/src/main/res/layout/activity_single_item_view.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="au.edu.adelaide.connected_health_app.MedicalNoteSingleViewActivity">
+    tools:context="au.edu.adelaide.connected_health_app.SingleItemViewActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,15 +22,6 @@
             android:layout_gravity="center_horizontal"
             android:background="@android:color/background_light">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Content of medical note\ntext text text"
-                android:id="@+id/textView4"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
         </RelativeLayout>
 
         <LinearLayout
@@ -80,4 +71,5 @@
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
